--- a/src/code-nasa-invalid.html
+++ b/src/code-nasa-invalid.html
@@ -1,1 +1,34 @@
-<html><head></head><body><dom-module id="code-nasa-invalid"><template><style include="shared-styles">:host{display:block;}</style><div class="container"><div class="splash">Invalid page. <a href="/#/">Go to homepage</a></div></div></template><script>Polymer({is:"code-nasa-invalid"});</script></dom-module></body></html>
+<!--
+@license
+Copyright (c) 2016 The Polymer Project Authors. All rights reserved.
+This code may only be used under the BSD style license found at http://polymer.github.io/LICENSE.txt
+The complete set of authors may be found at http://polymer.github.io/AUTHORS.txt
+The complete set of contributors may be found at http://polymer.github.io/CONTRIBUTORS.txt
+Code distributed by Google as part of the polymer project is also
+subject to an additional IP rights grant found at http://polymer.github.io/PATENTS.txt
+-->
+
+<link rel="import" href="../bower_components/polymer/polymer.html">
+<link rel="import" href="shared-styles.html">
+
+<dom-module id="code-nasa-invalid">
+  <template>
+    <style include="shared-styles">
+      :host {
+        display: block;
+      }
+    </style>
+
+    <div class="container">
+      <div class="splash">
+        Invalid page. <a href="/#/">Go to homepage</a>
+      </div>
+    </div>
+  </template>
+
+  <script>
+    Polymer({
+      is: 'code-nasa-invalid'
+    });
+  </script>
+</dom-module>
