Guide Step 4 update

--- a/src/code-nasa-guide.html
+++ b/src/code-nasa-guide.html
@@ -164,7 +164,7 @@
                     <div class="step-image step-4"></div>
                     <h2>4</h2>
                     <div class="description" itemprop="description">
-                        <p itemprop="url">Submit a NAMS request by filling out the <a href="http://nams.nasa.gov/nams/asset/227756" target="_blank">HQ AGCY NASA GitHub Collaborator Form</a>. This will request you be added as a member or collaborator to <a href="https://github.com/orgs/nasa/people">https://github.com/nasa</a>.</p>
+                        <p itemprop="url">Submit a NAMS request by filling out the <a href="http://nams.nasa.gov/nams/asset/227756" target="_blank">HQ AGCY NASA GitHub Collaborator Form</a>. This will request you be added as a member or collaborator to <a href="https://github.com/orgs/nasa/people">https://github.com/nasa</a>. For new repo requests, you must include your SRA approval number into TEAMS & Repositories</p>
                     </div>
                 </div>
                 <div class="step" itemprop="step 5">
