accessibility udpate point#3

--- a/index.html
+++ b/index.html
@@ -157,12 +157,16 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
 
     <footer>
       <p itemprop="title">
-        NASA Officials:
+        NASA Official:
         <a itemprop="email" href="mailto:travis.kantz@nasa.gov" target="_blank">Travis Kantz</a>
       </p>
       <p class="last">
         <a itemprop="url" href="https://www.nasa.gov/about/highlights/HP_Privacy.html" target="_blank">
           Privacy Policy
+        </a>
+        |
+        <a itemprop="url" href="https://www.nasa.gov/general/accessibility/" target="_blank">
+          Accessibility
         </a>
         |
         <a itemprop="url" href="http://open.nasa.gov/" target="_blank">
